[B]0.0.7[/B]
  - Much better layout/ordering behaviour on downloads screen.
  - Blacklist downloads on failure (so they won't be tried again).  Blacklist entries expire after 1 week

[B]0.0.6[/B] (2013-09-23)
  - Small bug in jsonrpc when creating exceptions.
  - New exception 'EpisodeNotFoundException' when querying for a tv episode that is no longer present.
  - Add a get_version method to the service. (returns a string like '0.0.6')
  - Have the gui call the get_version when it starts.  It no match, fail to start gui (with warning about restart needed)
  - Service can now be stopped by sending it a 'SHUTDOWN' message (just that text, nothing more). 
  - Log start/finish/failure of downloads
  - Very simple (and hackish) gui for downloads

[B]0.0.5[/B] (2013-09-19)
  - Refactor things around a little so that the gui won't load sqlite.
  - Much much faster response for tvdb data, tvdb_api was much too slow (it appears that it doesn't cache correctly?).  
    We now only use it for getting the episode name on a new download.
  - Pickle our fast_cache data on shutdown, and load it again on startup.
  - Create a general module for caching (looks like we're going to be doing a lot of this!)

[B]0.0.4[/B] (2013-09-17)
  - Better handling of ipc timeouts in comms (again, the Pi is the issue here)
  - Rearrange the gui a bit to show more fanart
  - Handle the case where empty tv shows have integer tvdb_id's
  - Rename downloaded file (fixed names for now, this will be a config setting in the future)

[B]0.0.3[/B] (2013-09-16)
  - Workaround for the odd exception on the Pi when getting platform info

[B]0.0.2[/B] (2013-09-13)
  - Very simple (yet mostly functional) gui

[B]0.0.1[/B]
  - Initial, pre-alpha.